--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -88,3 +89,7 @@ Temporary Items
 # Ignore all local history of files
 .history
 .ionide
+
+### --- Project-specific ignores ---
+
+coverage/
