--- a/deno.json
+++ b/deno.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "imports": {
     "@/": "./",
-    "@std/assert": "jsr:@std/assert@1"
+    "@std/assert": "jsr:@std/assert@1",
+    "@std/path": "jsr:@std/path@^1.0.8"
   }
 }
