--- a/deno.json
+++ b/deno.json
@@ -14,6 +14,7 @@
   "imports": {
     "@/": "./",
     "@std/assert": "jsr:@std/assert@1",
-    "@std/path": "jsr:@std/path@^1.0.8"
+    "@std/path": "jsr:@std/path@^1.0.8",
+    "@std/testing": "jsr:@std/testing@^1.0.9"
   }
 }
