--- a/deno.json
+++ b/deno.json
@@ -3,6 +3,7 @@
   "version": "0.1.0-alpha.5",
   "exports": "./mod.ts",
   "tasks": {
+    "configure": "lefthook install",
     "dev": "deno test -RW --watch",
     "coverage": "deno test -RW --coverage && deno coverage --html",
     "coverage:serve": {
@@ -10,11 +11,13 @@
       "dependencies": ["coverage"]
     }
   },
+  "nodeModulesDir": "auto",
   "license": "MIT",
   "imports": {
     "@/": "./",
     "@std/assert": "jsr:@std/assert@1",
     "@std/path": "jsr:@std/path@^1.0.8",
-    "@std/testing": "jsr:@std/testing@^1.0.9"
+    "@std/testing": "jsr:@std/testing@^1.0.9",
+    "lefthook": "npm:lefthook@^1.11.1"
   }
 }
